--- a/.github/workflows/personal-schedule.yml
+++ b/.github/workflows/personal-schedule.yml
@@ -25,17 +25,31 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install aiohttp
+        echo "✅ Dependencies installed"
+        
+    - name: Debug info
+      run: |
+        echo "🕐 Current UTC time: $(date -u)"
+        echo "📁 Current directory: $(pwd)"
+        echo "📄 Files in directory: $(ls -la)"
+        
+    - name: Test basic Python
+      run: |
+        python test_simple.py
         
     - name: Run Personal Schedule
+      id: schedule
+      continue-on-error: true
       run: |
         python personal_schedule.py
         
-    - name: Notify completion
-      if: success()
+    - name: Success notification
+      if: steps.schedule.outcome == 'success'
       run: |
         echo "✅ Personal schedule reminder sent successfully"
         
-    - name: Notify failure
-      if: failure()
+    - name: Failure notification
+      if: steps.schedule.outcome == 'failure'
       run: |
         echo "❌ Failed to send personal schedule reminder"
+        echo "Check the logs above for details"
