--- a/.github/workflows/personal-schedule.yml
+++ b/.github/workflows/personal-schedule.yml
@@ -2,58 +2,40 @@ name: Personal Daily Schedule
 
 on:
   schedule:
-    # Три раза в день: 07:30, 12:30, 19:00 по Москве (04:30, 09:30, 16:00 UTC)
-    - cron: '30 4 * * *'  # Утро 07:30 МСК
-    - cron: '30 9 * * *'  # День 12:30 МСК  
-    - cron: '0 16 * * *'  # Вечер 19:00 МСК
-  workflow_dispatch:  # Позволяет запускать вручную
+    - cron: '30 4 * * *'   # Утро 07:30 МСК
+    - cron: '30 9 * * *'   # День 12:30 МСК  
+    - cron: '0 16 * * *'   # Вечер 19:00 МСК
 
 jobs:
-  notify:
+  notify-morning:
+    if: github.event.schedule == '30 4 * * *'
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install aiohttp
-        echo "✅ Dependencies installed"
-        
-    - name: List files for debugging
-      run: |
-        echo "📁 Current directory: $(pwd)"
-        echo "📄 Files in root:"
-        ls -la
-        echo "📄 Files in current dir:"
-        find . -name "*.py" -type f
-        
-    - name: Test basic Python
-      run: |
-        echo "🧪 Testing Python..."
-        python --version
-        python test_simple.py
-        
-    - name: Run Personal Schedule
-      run: |
-        echo "🚀 Running main script..."
-        python personal_schedule.py
-      continue-on-error: false
-        
-    - name: Success notification
-      if: success()
-      run: |
-        echo "✅ Personal schedule reminder sent successfully"
-        
-    - name: Failure notification
-      if: failure()
-      run: |
-        echo "❌ Failed to send personal schedule reminder"
-        echo "Check the logs above for details"
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install aiohttp
+      - run: python personal_schedule.py morning
+
+  notify-day:
+    if: github.event.schedule == '30 9 * * *'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install aiohttp
+      - run: python personal_schedule.py day
+
+  notify-evening:
+    if: github.event.schedule == '0 16 * * *'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install aiohttp
+      - run: python personal_schedule.py evening
