--- a/.github/workflows/personal-schedule.yml
+++ b/.github/workflows/personal-schedule.yml
@@ -1,41 +1,42 @@
-name: Personal Daily Schedule
+name: Daily Schedule Notifier
 
 on:
   schedule:
-    - cron: '30 4 * * *'   # Утро 07:30 МСК
-    - cron: '30 9 * * *'   # День 12:30 МСК  
-    - cron: '0 16 * * *'   # Вечер 19:00 МСК
+    - cron: '30 4 * * *'   # 07:30 MSK - morning
+    - cron: '30 9 * * *'   # 12:30 MSK - day  
+    - cron: '0 16 * * *'   # 19:00 MSK - evening
+  workflow_dispatch:
+    inputs:
+      period:
+        description: 'Period'
+        required: true
+        default: 'morning'
+        type: choice
+        options:
+        - morning
+        - day
+        - evening
 
 jobs:
-  notify-morning:
-    if: github.event.schedule == '30 4 * * *'
+  send-notification:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - run: pip install aiohttp
-      - run: python personal_schedule.py morning
-
-  notify-day:
-    if: github.event.schedule == '30 9 * * *'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - run: pip install aiohttp
-      - run: python personal_schedule.py day
-
-  notify-evening:
-    if: github.event.schedule == '0 16 * * *'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - run: pip install aiohttp
-      - run: python personal_schedule.py evening
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install aiohttp
+        
+    - name: Send notification
+      env:
+        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      run: |
+        python notifier.py ${{ github.event.inputs.period || 'morning' }}
